# mailcore2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE  OWNERS  PULL_REQUEST_TEMPLATE.md  Package.swift  QUICKSTART.md  README.md  REPOSITORY.yaml  TODO.md  ant-designs?organization=oscarg933&organization=oscarg933  mailcore2-ios.podspec  mailcore2-ios.podspec.json  mailcore2-osx.podspec  mailcore2-osx.podspec.json  prebuilt.list.tmp
build-android/localdeps/ctemplate/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README_windows.txt  config.status  configure  configure.ac
src/: CMakeLists.txt  MailCore.h  android_log.h  mailcore.h
src/async/: MCAsync.h
src/async/imap/: IMAPAsyncSession.h  MCAsyncIMAP.h  MCIMAPAccount.cpp  MCIMAPAccount.h  MCIMAPAppendMessageOperation.cc  MCIMAPAppendMessageOperation.cpp  MCIMAPAppendMessageOperation.h  MCIMAPAsyncConnection.cc  MCIMAPAsyncConnection.cpp  MCIMAPAsyncConnection.h  MCIMAPAsyncSession.cc  MCIMAPAsyncSession.cpp  MCIMAPAsyncSession.h  MCIMAPCapabilityOperation.cc  MCIMAPCapabilityOperation.cpp  MCIMAPCapabilityOperation.h  MCIMAPCheckAccountOperation.cc  MCIMAPCheckAccountOperation.cpp  MCIMAPCheckAccountOperation.h  MCIMAPConnectOperation.cc  MCIMAPConnectOperation.h  MCIMAPCopyMessagesOperation.cc  MCIMAPCopyMessagesOperation.cpp  MCIMAPCopyMessagesOperation.h  MCIMAPCreateFolderOperation.cc  MCIMAPCreateFolderOperation.h  MCIMAPCustomCommandOperation.cpp  MCIMAPCustomCommandOperation.h  MCIMAPDeleteFolderOperation.cc  MCIMAPDeleteFolderOperation.h  MCIMAPDisconnectOperation.cc  MCIMAPDisconnectOperation.h  MCIMAPEnableCompressionOperation.cc  MCIMAPEnableCompressionOperation.h  MCIMAPExpungeOperation.cc  MCIMAPExpungeOperation.cpp  MCIMAPExpungeOperation.h  MCIMAPFetchContentOperation.cc  MCIMAPFetchContentOperation.cpp  MCIMAPFetchContentOperation.h  (+56 more)
src/async/mx/: MCResolveProviderUsingMXRecord.cpp  MCResolveProviderUsingMXRecord.h
src/async/nntp/: MCAsyncNNTP.h  MCNNTPAsyncSession.cc  MCNNTPAsyncSession.cpp  MCNNTPAsyncSession.h  MCNNTPCheckAccountOperation.cc  MCNNTPCheckAccountOperation.h  MCNNTPDisconnectOperation.cpp  MCNNTPDisconnectOperation.h  MCNNTPFetchAllArticlesOperation.cc  MCNNTPFetchAllArticlesOperation.h  MCNNTPFetchArticleOperation.cc  MCNNTPFetchArticleOperation.cpp  MCNNTPFetchArticleOperation.h  MCNNTPFetchArticlesOperation.cc  MCNNTPFetchArticlesOperation.h  MCNNTPFetchHeaderOperation.cc  MCNNTPFetchHeaderOperation.cpp  MCNNTPFetchHeaderOperation.h  MCNNTPFetchMessageOperation.cpp  MCNNTPFetchMessageOperation.h  MCNNTPFetchMessagesOperation.cpp  MCNNTPFetchMessagesOperation.h  MCNNTPFetchOverviewOperation.cc  MCNNTPFetchOverviewOperation.cpp  MCNNTPFetchOverviewOperation.h  MCNNTPFetchServerTimeOperation.cc  MCNNTPFetchServerTimeOperation.cpp  MCNNTPFetchServerTimeOperation.h  MCNNTPListNewsgroupsOperation.cc  MCNNTPListNewsgroupsOperation.cpp  MCNNTPListNewsgroupsOperation.h  MCNNTPOperation.cpp  MCNNTPOperation.h  MCNNTPOperationCallback.h  MCNNTPPostOperation.cpp  MCNNTPPostOperation.h  MCNNTPSendOperation.cpp  MCNNTPSendOperation.h
src/async/pop/: MCAsyncPOP.h  MCPOPAsyncSession.cc  MCPOPAsyncSession.cpp  MCPOPAsyncSession.h  MCPOPCheckAccountOperation.cc  MCPOPCheckAccountOperation.h  MCPOPDeleteMessagesOperation.cc  MCPOPDeleteMessagesOperation.cpp  MCPOPDeleteMessagesOperation.h  MCPOPFetchHeaderOperation.cc  MCPOPFetchHeaderOperation.cpp  MCPOPFetchHeaderOperation.h  MCPOPFetchMessageOperation.cc  MCPOPFetchMessageOperation.cpp  MCPOPFetchMessageOperation.h  MCPOPFetchMessagesOperation.cc  MCPOPFetchMessagesOperation.h  MCPOPNoopOperation.cpp  MCPOPNoopOperation.h  MCPOPOperation.cc  MCPOPOperation.h  MCPOPOperationCallback.h
src/async/smtp/: MCAsyncSMTP.h  MCSMTPAsyncSession.cc  MCSMTPAsyncSession.cpp  MCSMTPAsyncSession.h  MCSMTPCheckAccountOperation.cc  MCSMTPCheckAccountOperation.h  MCSMTPDisconnectOperation.cc  MCSMTPDisconnectOperation.h  MCSMTPLoginOperation.cc  MCSMTPLoginOperation.h  MCSMTPNoopOperation.cc  MCSMTPNoopOperation.h  MCSMTPOperation.cc  MCSMTPOperation.cpp  MCSMTPOperation.h  MCSMTPOperationCallback.h  MCSMTPSendWithBuilderOperation.cc  MCSMTPSendWithBuilderOperation.h  MCSMTPSendWithDataOperation.cc  MCSMTPSendWithDataOperation.cpp  MCSMTPSendWithDataOperation.h  MCSMTPSendWithRecipientOperation.cc  MCSMTPSendWithRecipientOperation.h
src/cmake/: async.cmake  core.cmake  gen-public-headers.sh  objc.cmake  public-headers.cmake
src/core/: MCCore.h
src/core/abstract/: MCAbstract.h  MCAbstractMessage.cc  MCAbstractMessage.cpp  MCAbstractMessage.h  MCAbstractMessagePart.cc  MCAbstractMessagePart.h  MCAbstractMultipart.cc  MCAbstractMultipart.h  MCAbstractPart.cc  MCAbstractPart.cpp  MCAbstractPart.h  MCAddress.cc  MCAddress.cpp  MCAddress.h  MCErrorMessage.cpp  MCErrorMessage.h  MCMessageConstants.h  MCMessageConstantsPrivate.h  MCMessageHeader.cc  MCMessageHeader.cpp  MCMessageHeader.h
src/core/basetypes/: ConvertUTF.c  ConvertUTF.h  MCAndroid.cpp  MCAndroid.h  MCArray.cc  MCArray.cpp  MCArray.h  MCAssert.c  MCAssert.cc  MCAssert.h  MCAutoreleasePool.cc  MCAutoreleasePool.cpp  MCAutoreleasePool.h  MCAutoreleasePoolMac.mm  MCBase64.c  MCBase64.h  MCBaseTypes.h  MCConnectionLogger.h  MCConnectionLoggerUtils.cc  MCConnectionLoggerUtils.cpp  MCConnectionLoggerUtils.h  MCData.cc  MCData.cpp  MCData.h  MCDataDecoderUtils.cpp  MCDataDecoderUtils.h  MCDataMac.mm  MCDataStreamDecoder.cpp  MCDataStreamDecoder.h  (+72 more)
src/java/: JavaConnectionLogger.cpp  JavaConnectionLogger.h  JavaHTMLRendererIMAPCallback.cpp  JavaHTMLRendererIMAPCallback.h  JavaHTMLRendererTemplateCallback.cpp  JavaHTMLRendererTemplateCallback.h  JavaHandle.cpp  JavaHandle.h  JavaIMAPOperationCallback.cpp  JavaIMAPOperationCallback.h  JavaOperationQueueCallback.cpp  JavaOperationQueueCallback.h  TypesUtils.cpp  TypesUtils.h  generate-headers.sh
src/objc/: MCOConstants.h  MCOProvider.h  MCObjC.h
tests/: CMakeLists.txt  main.cpp  main.mm  test-all-mac.h  test-all-mac.mm  test-all.cpp  test-all.h  test-all.mm
unittest/: CMakeLists.txt  Info.plist  unittest.cpp  unittest.mm
(+1462 files in other folders)
